--- a/assignment1.html
+++ b/assignment1.html
@@ -7,7 +7,7 @@
         <h1>...My GirlGang!</h1> 
         <div class="container1">
             <div class="image">
-                <img src="BF.jpg" alt="My Crew">
+                <img src="https://i.etsystatic.com/32301953/r/il/2d6074/3514319314/il_794xN.3514319314_p0bx.jpg" alt="My Crew">
             </div>
             <div></div>
             <div class="text">
